[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recsys-two-stage"
version = "0.1.0"
description = "A two-stage recommender — matrix-factorization candidate retrieval + LightGBM ranking — with offline Recall@k / NDCG@k / MAP@k evaluation and a /recommend API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["recommender-system", "recsys", "learning-to-rank", "lightgbm", "matrix-factorization", "ndcg"]
authors = [{ name = "Taimoor Karim" }]

dependencies = ["numpy>=1.26", "pandas>=2.2", "pyarrow>=15.0", "scipy>=1.11", "scikit-learn>=1.4", "lightgbm>=4.0"]

[project.optional-dependencies]
serve = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2.6"]
dev = ["pytest>=8.0", "httpx>=0.27"]
all = ["recsys-two-stage[serve,dev]"]

[project.scripts]
recsys-data = "recsys.data:main"
recsys-eval = "recsys.pipeline:main"

[tool.hatch.build.targets.wheel]
packages = ["src/recsys"]
